// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <ul
      class="sc-bUbCnL sc-hNKHps yqZnU flAqRc sc-dsQDmV jUuGTp"
    >
      <li>
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
        >
          You can put 
          <a
            class="sc-hlnMnd cpbYOv sc-eKBdFk cTggPd"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
        >
          Multiline text
          <div
            class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <ol
      class="sc-bUbCnL sc-kIKDeO yqZnU IIosZ sc-dsQDmV jUuGTp"
    >
      <li>
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
        >
          You can put 
          <a
            class="sc-hlnMnd cpbYOv sc-eKBdFk cTggPd"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
        >
          Multiline text
          <div
            class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
